--- a/Task_4/Static1/CMakeLists.txt
+++ b/Task_4/Static1/CMakeLists.txt
@@ -2,4 +2,6 @@ add_executable(main main.cpp)
 
 add_library(Matrix STATIC Matrix.cpp Exception.cpp)
 
-target_link_libraries(main Matrix)
+add_library(Print STATIC GeneralPrint.cpp PrintMatrixConsole.cpp)
+
+target_link_libraries(main Matrix Print)
